Food Culture Site

--- a/index.html
+++ b/index.html
@@ -4,12 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Food</title>
+    <title>FoodCulture</title>
+    <link rel="icon" href="img/Varenyky.png">
 </head>
 <body>
-    <h1>Food</h1>
-    <h2>Tell us about the food you like</h2>
-    <img src="img/Ebene 4.PNG" alt="Ebene 4">
-    
+    <header>
+      <h1>Food Culture</h1>
+      <h2>Exploring eating habits around the world</h2>
+      <p>We are asking people around the world about the <a href="https://www.youtube.com/watch?v=pWUzkxtoJ2I">food</a> they like in order to find out more about some specific eating habits in diferrent countries.</p>
+      <p>Please take some time and fill the <a href="form.html">form</a> and we will contact you with further information and link to the survey.</p>
+    </header>
+    <main>
+      <section>
+         <h3>Ukrainian cuisine</h3>
+         <img src="img/Varenyky.png" alt="Varenyky">
+      </section>
+      <section>
+         <h3>Countries we are currently working with</h3>
+         <ul>
+           <li>Ukraine</li>
+           <li>Georgia</li>
+           <li>Kenya</li>
+           <li>Kazakhstan</li>
+           <li>Iceland</li>
+           <li>Greenland</li>
+           <li>Mexico</li>
+         </ul>
+      </section>
+    </main>
+    <footer>
+      <p>Contact Support</p>
+    </footer>
 </body>
 </html>
