Added Link to Support

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
          <img src="img/Varenyky.png" alt="Varenyky">
     </section>
       <section>
-         <h3>Countries we are currently working with</h3>
+         <h3>Countries we are currently working with:</h3>
          <ul>
              <li>Ukraine</li>
              <li>Georgia</li>
@@ -33,7 +33,7 @@
       </section>
     </main>
     <footer>
-      <p>Contact Support</p>
+      <p><a href="https://www.instagram.com/svidryk_">Contact Support</a></p>
     </footer>
 </body>
 </html>
